force-app/main/default/objects/Community_Contacts__c/Community_Contacts__c.object-meta.xml
<CustomObject>
    <label>Community Contacts</label>
    <nameField>
        <label>Community Contacts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>