force-app/main/default/objects/Community_Contacts__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Community Contacts</relationshipLabel>
    <relationshipName>Community_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>