force-app/main/default/objects/Community_Contacts__c/fields/Community_Job__c.field-meta.xml
<CustomField>
    <fullName>Community_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community/Job</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Community Contacts</relationshipLabel>
    <relationshipName>Community_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>