force-app/main/default/objects/Community_Contacts__c/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <formula>TEXT( Contact__r.Functional_Area__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Functional Area</label>
    <type>Text</type>
</CustomField>